padding of projects description

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							<div class="portfolio-overlay">
 								<h4>Car Pooling</h4>
 								<h5>Role: Project Team Lead</h5>
-								<p>Carpooling is the practice of sharing a car journey with others to reduce travel costs, ease traffic congestion, and lower environmental impact. It typically involves multiple passengers traveling together along a similar route.</p>
+								<p class="para">Carpooling is the practice of sharing a car journey with others to reduce travel costs, ease traffic congestion, and lower environmental impact. It typically involves multiple passengers traveling together along a similar route.</p>
 							</div>
 					</div>
 				</div>
@@ -182,7 +182,7 @@
 						<img src="images/atm-canva.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>ATM management system</h4>
-								<p>An ATM Management System is a software application designed to manage and automate the operations of ATMs, such as user authentication, cash withdrawals, deposits, and transaction records. It ensures smooth ATM functionality, security, and real-time data processing for both users and administrators.</p>
+								<p class="para">An ATM Management System is a software application designed to manage and automate the operations of ATMs, such as user authentication, cash withdrawals, deposits, and transaction records. It ensures smooth ATM functionality, security, and real-time data processing for both users and administrators.</p>
 							</div>
 					</div>
 				</div>
